# custos

./: .gitignore  Cargo.toml  README.md  custos.toml
migrations/2024-06-25-161533_create_files/: up.sql
rules/: rust.yar
src/: config.rs  coordinator.rs  main.rs  reporter.rs  strategies.rs
src/db/: database.rs  file_repository.rs  mod.rs  schema.rs
src/reports/: mod.rs  report_manager.rs  terminal_reporter.rs
src/strategies/: hash_strategy.rs  mod.rs  yara_strategy.rs
