[package]
name = "aegis"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
crossbeam = "0.8.4"
diesel = { version = "2.2.1", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
glob = "0.3.1"
hex = "0.4.3"
parking_lot = "0.12.3"
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
yara = "0.28.0"
